--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,9 @@ spring:
         globally_quoted_identifiers: true
         dialect: org.hibernate.dialect.MySQLDialect
   datasource:
-    url: jdbc:mysql://localhost/drcomputer
+    url: jdbc:mysql://viaduct.proxy.rlwy.net/tenlagicungduoc
     username: root
-    password:
+    password: gmuVZNQtYBkofncxAfJOpwYmLyUjQZXq
     driver-class-name: com.mysql.cj.jdbc.Driver
   mail:
     host: smtp.gmail.com
